# limgpo4-osl-proton-dosimetry

./: .gitignore  LICENSE  pyproject.toml
lmpfoils/: __init__.py  alignment.py  comparison.py  dataset.py  detector.py  experiment_config.py  fitting.py  geometry.py  image_io.py  paths.py  pipeline.py  plotting.py  preprocessing.py  reference_data.py
tests/: test_comparison.py  test_dataset.py  test_experiment_config.py  test_fitting.py  test_geometry.py  test_image_io.py  test_paths.py  test_pipeline.py  test_preprocessing.py  test_reference_data.py
